--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -10,11 +10,13 @@
     "group/tray-expander",
     "bluetooth",
     "network",
+    "custom/vpn",
     "pulseaudio",
     "custom/eq",
     "custom/media-prev",
     "custom/media-toggle",
     "custom/media-next",
+    "memory",
     "cpu",
     "battery",
     "custom/update"
@@ -73,6 +75,13 @@
     "escape": false,
     "tooltip": true
   },
+  "custom/vpn": {
+    "exec": "/home/zeus/.config/waybar/scripts/campus-vpn.sh status",
+    "return-type": "json",
+    "interval": 2,
+    "on-click": "/home/zeus/.config/waybar/scripts/campus-vpn.sh toggle",
+    "tooltip": true
+  },
   "custom/update": {
     "format": "",
     "exec": "omarchy-update-available",
@@ -82,6 +91,13 @@
     "interval": 21600
   },
 
+  "memory": {
+    "interval": 5,
+    "format": "  {used:0.1f}/{total:0.1f}G",
+    "on-click": "omarchy-launch-or-focus-tui btop",
+    "tooltip": true,
+    "tooltip-format": "RAM: {used:0.1f}G / {total:0.1f}G\nSwap: {swapUsed:0.1f}G / {swapTotal:0.1f}G"
+  },
   "cpu": {
     "interval": 5,
     "format": "󰍛",
@@ -105,7 +121,7 @@
     "tooltip-format-disconnected": "Disconnected",
     "interval": 3,
     "spacing": 1,
-    "on-click": "omarchy-launch-wifi"
+    "on-click": "/home/zeus/.local/share/omarchy/bin/omarchy-launch-wifi"
     
   },
   "battery": {
@@ -133,11 +149,11 @@
     "format-connected": "󰂱",
     "format-no-controller": "",
     "tooltip-format": "Devices connected: {num_connections}",
-    "on-click": "omarchy-launch-bluetooth"
+    "on-click": "/home/zeus/.local/share/omarchy/bin/omarchy-launch-bluetooth"
   },
   "pulseaudio": {
     "format": "{icon}",
-    "on-click": "omarchy-launch-audio",
+    "on-click": "/home/zeus/.local/share/omarchy/bin/omarchy-launch-audio",
     "on-click-right": "pamixer -t",
     "tooltip-format": "Playing at {volume}%",
     "scroll-step": 5,
